bug: override whitespace CODE embedded within PRE

--- a/_includes/css/poole.css
+++ b/_includes/css/poole.css
@@ -112,6 +112,10 @@ code {
   display: inline;
   white-space: nowrap;
 }
+pre > code {
+  display: block;
+  white-space: pre;
+}
 pre {
   display: block;
   margin: 1rem 0 1rem 0;
